app-frontend-datastore.yaml
# Copyright 2019 Mulesoft.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

# This file configures the API components autotest CI application frontend.
# The frontend serves public web traffic.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apic-ci-frontend
  labels:
    app: apic-ci
# For more info about Pods see:
#   https://cloud.google.com/container-engine/docs/pods/
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: apic-ci
        tier: frontend
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: apic-ci-key
      containers:
      - name: apic-ci
        image: gcr.io/advancedrestclient-1155/api-components-autotest-ci:rc-1
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        # The app process listens on port 8080 for web traffic by default.
        ports:
        - name: http-server
          containerPort: 8080
