app-travis.yaml
# Copyright 2019 Mulesoft.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

# This file configures the API/ARC components CI pipeline where components are
# build for production. This includes updating changelog, tagging and merging
# stage with master branch.
#
# In ARC organization master branch is only updated by this process, never by
# maitainer. It is only done when the component passes the tests.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: travis-ci-worker
  labels:
    app: travis-ci
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: travis-ci
        tier: worker
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: apic-ci-key
      - name: ci-agent-key
        secret:
          secretName: ci-gpg-key
      containers:
      - name: travis-ci
        image: gcr.io/advancedrestclient-1155/api-components-autotest-ci:1.0.3
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        - name: ci-agent-key
          mountPath: /var/secrets/apic
        - name: github-ssh-key
          mountPath: /var/secrets/apic
        imagePullPolicy: Always
