apic-tests-service.yaml
# The APIComponents tester service provides a load-balancing proxy over the app
# frontend pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine
# will create an external HTTP load balancer.
# For more information about Services see:
#   https://cloud.google.com/kubernetes-engine/docs/services/
# For more information about external HTTP load balancing see:
#   https://cloud.google.com/kubernetes-engine/docs/load-balancer
apiVersion: v1
kind: Service
metadata:
  name: apic-ci-frontend
  labels:
    app: apic-ci
    tier: frontend
spec:
  type: LoadBalancer
  loadBalancerIP: 35.233.153.23
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: apic-ci
    tier: frontend
